--- a/hello.html
+++ b/hello.html
@@ -4,9 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>TEST</title>
+    <style>
+        h1{
+            background-color: aqua;
+            color: black;
+            width: auto;
+            height: 45px;
+            text-align: center;
+        }
+    </style>
 </head>
 <body>
-    <h1>TEST</h1>
+    <h1>welcome to test page</h1>
 </body>
 </html>
