--- a/hello.html
+++ b/hello.html
@@ -13,9 +13,16 @@
             height: 45px;
             text-align: center;
         }
+        a {
+            display:inline-block;
+        }
     </style>
 </head>
 <body>
     <h1>welcome to test page</h1>
+    <a href="#home"> Home </a>
+    <a href="#con"> contact </a>
+    <a href="#about"> about </a>
+    <a href="#ad"> address </a>
 </body>
 </html>
