--- a/hello.html
+++ b/hello.html
@@ -13,16 +13,29 @@
             height: 45px;
             text-align: center;
         }
-        a {
+        div{
             display:inline-block;
+            background-color: black;
+            
+        }
+        a {
+            color: aliceblue;
+            padding: 0px 60px 0px 60px;
+            text-decoration: none;
+        }
+        a:hover{
+            color:cornflowerblue;
+            text-decoration: underline;
         }
     </style>
 </head>
 <body>
     <h1>welcome to test page</h1>
+    <div>
     <a href="#home"> Home </a>
     <a href="#con"> contact </a>
     <a href="#about"> about </a>
     <a href="#ad"> address </a>
+    </div>
 </body>
 </html>
