--- a/hello.html
+++ b/hello.html
@@ -19,7 +19,7 @@
     </style>
 </head>
 <body>
-    <h1>welcome to test page</h1>
+    <h1 style="backgrond-color:pink;">welcome to test page </h1>
     <a href="#home"> Home </a>
     <a href="#con"> contact </a>
     <a href="#about"> about </a>
