fixed merge conflict

--- a/hello.html
+++ b/hello.html
@@ -22,7 +22,7 @@
             color: aliceblue;
             padding: 0px 60px 0px 60px;
             text-decoration: none;
-        }
+        } 
         a:hover{
             color:cornflowerblue;
             text-decoration: underline;
@@ -30,12 +30,8 @@
     </style>
 </head>
 <body>
-<<<<<<< HEAD
-    <h1>welcome to test page</h1>
+    <h1 style="backgrond-color:pink;">welcome to test page !!</h1>
     <div>
-=======
-    <h1 style="backgrond-color:pink;">welcome to test page </h1>
->>>>>>> 9f3af3447935f79679e279c61343bcc1aed7f8e3
     <a href="#home"> Home </a>
     <a href="#con"> contact </a>
     <a href="#about"> about </a>
